@@ -7,9 +7,9 @@ public class Player {
     private int jerseyStock;
 
     public Player(String id, String teamId, String name, int jerseyStock) {
-        if (id == null || id.isBlank()) throw new IllegalArgumentException("id");
-        if (teamId == null || teamId.isBlank()) throw new IllegalArgumentException("teamId");
-        if (name == null || name.isBlank()) throw new IllegalArgumentException("name");
+        if (id == null || id.trim().isEmpty()) throw new IllegalArgumentException("id");
+        if (teamId == null || teamId.trim().isEmpty()) throw new IllegalArgumentException("teamId");
+        if (name == null || name.trim().isEmpty()) throw new IllegalArgumentException("name");
         if (jerseyStock < 0) throw new IllegalArgumentException("stock");
         this.id = id; this.teamId = teamId; this.name = name; this.jerseyStock = jerseyStock;
     }
@@ -17,7 +17,7 @@ public class Player {
     public String getId() { return id; }
     public String getTeamId() { return teamId; }
     public String getName() { return name; }
-    public void setName(String n) { if (n == null || n.isBlank()) throw new IllegalArgumentException("name"); this.name = n; }
+    public void setName(String n) { if (n == null || n.trim().isEmpty()) throw new IllegalArgumentException("name"); this.name = n; }
     public int getJerseyStock() { return jerseyStock; }
     public void setJerseyStock(int s) { if (s < 0) throw new IllegalArgumentException("stock"); this.jerseyStock = s; }
 
